chore: rewrite-java
Signed-off-by: Andrew Berezovskyi <andriib@kth.se>